added auction and artist page

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -147,3 +147,10 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+
+
+.backdrop-blur-lg {
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
