changes in layout make better layout

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -154,3 +154,9 @@ body {
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
 }
+
+
+
+/* body{
+  background-color: #D2E9E9;
+} */
