--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -28,10 +28,12 @@ body {
 }
 
 body {
-  font-family: 'YourFont', sans-serif;
+  background-color: #d1d1d1; /* Light gray from your gradient endpoint */
 }
 
-
+.bg_color {
+  background-color: #d9d9d9; /* Lighter gray from your gradient endpoint */
+}
 
 .btn {
   cursor: pointer;
