--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -28,12 +28,14 @@ body {
 }
 
 body {
-  background-color: #d1d1d1; /* Light gray from your gradient endpoint */
+  background-color: #f4a261;
 }
 
 .bg_color {
-  background-color: #d9d9d9; /* Lighter gray from your gradient endpoint */
+  background-color: #f4a261;
 }
+
+
 
 .btn {
   cursor: pointer;
